--- a/app1-sugerenciaInmuebles.ipynb
+++ b/app1-sugerenciaInmuebles.ipynb
@@ -17,8 +17,8 @@
     "con <- dbConnect(odbc(),\n",
     "                 Driver = \"SQLServer\",\n",
     "                 Server = \"54.245.36.29\",\n",
-    "                 Database = \"ocesa_dwh\",\n",
-    "                 UID = \"ocesa_da\",\n",
+    "                 Database = \"DATA BASE\",\n",
+    "                 UID = \"SUPER USER \",\n",
     "                 PWD = \"P4ssw0rd3\",\n",
     "                 Port = 1433)\n"
    ]
